Fix spacing errors in css

--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ div {
 .first {
   width: 100%;
   position: absolute;
-  top: 2px;
+  top: 3px;
 }
 
 .second {
